# mpyl-example-simple

./: .gitignore  README.md  libs.versions.toml  mpyl-dagster-example.py  mpyl-dagster-example.yml  mpyl_config.yml  mpyl_stages.schema.yml  pyproject.toml  run.py  run_properties.yml  settings.gradle.kts
.github/workflows/: build-mpyl-pipeline.yml
cicd/: run.py
cicd/steps/: docker.py  gradle.py  jre.Dockerfile
projects/gradle1/.component/: project.yml
projects/gradle1/src/main/kotlin/com/example/multimodule/service/: ApplicationOne.kt
projects/gradle1/src/test/kotlin/com/example/multimodule/service/: ApplicationOneTest.kt
projects/gradle2/: build.gradle.kts
projects/gradle2/.component/: project.yml
projects/gradle2/src/main/kotlin/com/example/multimodule/service/: ApplicationTwo.kt
projects/gradle2/src/test/kotlin/com/example/multimodule/service/: ApplicationTwoTest.kt
